[package]
name = "inside_hacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15"
egui_glium = "0.15"
glium = "0.30"
glutin = "0.27.0"
raw-window-handle = "0.3.3"

memhack = {git = "https://github.com/PentaWasTaken/memhack"}

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console"
]